# mini-gpt

./: .gitignore  MultiHeadAttention.py  README.md  main.py  muon.py  pos_encoding.py  preprocess_dataset.py  pyproject.toml  rmsnorm.py  tokenizer.py  transformer.py  utils.py
data/: machado_qa.json  machado_qa_fix.json  merges.json  vocab.json  vocabulary.json
mini_gpt/: __init__.py  config.py  generate.py  tokenizer.py  train.py
mini_gpt/data/: __init__.py  dataset.py  fineweb.py  preprocess.py
mini_gpt/inference/: __init__.py  engine.py
mini_gpt/model/: __init__.py  attention.py  rope.py  transformer.py
mini_gpt/optim/: __init__.py  muon.py
scripts/: inspect_params.py  plot_scaling.py  scaling_laws.py
