[project]
name = "mini-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude>=0.4.11",
    "datasets>=4.0.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "regex>=2025.9.1",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
]
